Add todomvc example.

--- a/index.html
+++ b/index.html
@@ -109,6 +109,16 @@
   </a>
 </p>
 
+<h2>Todos</h2>
+
+<p><a href="http://todomvc.com/labs/dependency-examples/chaplin-brunch/public/">Todos</a> (<a href="https://github.com/addyosmani/todomvc/tree/gh-pages/labs/dependency-examples/chaplin-brunch">code</a>) is a port of the famous backbone todos example app. Uses localStorage to persist data.</p>
+
+<p class="example-screenshot">
+  <a href="http://todomvc.com/labs/dependency-examples/chaplin-brunch/public/">
+    <img src="http://todomvc.com/site/img/screenshot.png" alt="" />
+  </a>
+</p>
+
 <h2>Moviepilot</h2>
 <p><a href="http://moviepilot.com/">Moviepilot</a> is a home for upcoming movies, where you can discover and read about the movies that interest and excite you.</p>
 
