--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 <p>There is no “global variables” build, so Chaplin explicitly prohibits any using without module systems.</p>
 
 <ul>
-  <li><a href="https://github.com/downloads/chaplinjs/chaplin/chaplin-0.5.0-amd.js">Chaplin 0.5.0 for AMD (require.js modules)</a></li>
-  <li><a href="https://github.com/downloads/chaplinjs/chaplin/chaplin-0.5.0-commonjs.js">Chaplin 0.5.0 for Brunch (common.js modules)</a></li>
+  <li><a href="https://raw.github.com/chaplinjs/downloads/gh-pages/amd/chaplin-0.6.0.js">Chaplin 0.6.0 for AMD (require.js modules)</a></li>
+  <li><a href="https://raw.github.com/chaplinjs/downloads/gh-pages/commonjs/chaplin-0.6.0.js">Chaplin 0.6.0 for Brunch (common.js modules)</a></li>
 </ul>
 
 <h2>Dependencies</h2>
