Fixed download links.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 <p>Latest release is 0.6.0 (<a href="https://github.com/chaplinjs/chaplin/blob/master/CHANGELOG.md">changelog</a>, <a href="http://github.com/chaplinjs/chaplin/compare/0.5.0...0.6.0">diff from 0.5.0</a>)</p>
 
 <ul>
-  <li><a href="https://raw.github.com/chaplinjs/downloads/gh-pages/amd/chaplin-0.6.0.js">Chaplin 0.6.0 for AMD (require.js modules)</a></li>
-  <li><a href="https://raw.github.com/chaplinjs/downloads/gh-pages/commonjs/chaplin-0.6.0.js">Chaplin 0.6.0 for Brunch (common.js modules)</a></li>
+  <li><a href="http://chaplinjs.org/downloads/amd/chaplin.js">Chaplin 0.6.0 for AMD (require.js modules)</a></li>
+  <li><a href="http://chaplinjs.org/downloads/commonjs/chaplin.js">Chaplin 0.6.0 for Brunch (common.js modules)</a></li>
 </ul>
 
 <h2>Dependencies</h2>
