--- a/index.html
+++ b/index.html
@@ -121,6 +121,15 @@
   </a>
 </p>
 
+<h2>Delicious</h2>
+<p><a href="https://delicious.com">Delicious</a> is a free service designed to be the best place to save what you love on the web, whether it's a video, picture, product, blog post, article or music. We then help you remember and find it later. It’s using Brunch as application builder and <a href="http://chaplinjs.org">Chaplin</a> as a framework on top of Backbone.</p>
+
+<p>
+  <a href="https://delicious.com">
+    <img src="http://brunch.io/images/screenshots/delicious.png" alt="Delicious" />
+  </a>
+</p>
+
 <h2>Moviepilot</h2>
 <p><a href="http://moviepilot.com/">Moviepilot</a> is a home for upcoming movies, where you can discover and read about the movies that interest and excite you.</p>
 
