--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <h1>Web application framework</h1>
 
 <p>
-  Chaplin is an architecture for JavaScript applications using the Backbone.js library. Chaplin addresses Backbone’s limitations by providing a lightweight and flexible structure that features well-profen design patterns and best practises.
+  Chaplin is an architecture for JavaScript applications using the Backbone.js library. Chaplin addresses Backbone’s limitations by providing a lightweight and flexible structure that features well-proven design patterns and best practices.
 </p>
 
 <p>Some of Chaplin’s features:</p>
