--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   <a href="http://paulmillr.com/" rel="author"><img src="http://api.twitter.com/1/users/profile_image/paulmillr?size=normal" alt="Paul Miller">
    <span class="name">Paul</span> Miller</a>
 
-  <a class="long-builder-name" href="https://github.com/mehcode"><img src="https://secure.gravatar.com/avatar/23e170cf3bbbb2a392a96df75858b332?s=400&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" alt="Ryan Leckey">
+  <a class="long-builder-name" href="https://github.com/mehcode"><img src="https://secure.gravatar.com/avatar/23e170cf3bbbb2a392a96df75858b332?s=400&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48" alt="Ryan Leckey">
    <span class="name">Ryan</span> Leckey</a>
 
   <a href="https://github.com/chaplinjs/chaplin/graphs/contributors">and others</a>
