--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <ul>
   <li>CoffeeScript <strong>class hierarchies</strong> as well as object composition</li>
-  <li><strong>Module</strong> encapsulation and lazy-loading using AMD modules</li>
+  <li><strong>Module</strong> encapsulation and lazy-loading using AMD / common.js modules</li>
   <li>Cross-module communication using the <strong>Mediator</strong> and Publish/Subscribe patterns</li>
   <li><strong>Controllers</strong> for managing individual UI views</li>
   <li>Rails-style <strong>routes</strong> which map URLs to controller actions</li>
@@ -61,6 +61,7 @@
 <ul>
   <li><a href="http://chaplinjs.org/downloads/amd/chaplin.js">Chaplin 0.6.0 for AMD (require.js modules)</a></li>
   <li><a href="http://chaplinjs.org/downloads/commonjs/chaplin.js">Chaplin 0.6.0 for Brunch (common.js modules)</a></li>
+  <li>If you’re using <a href="http://twitter.github.com/bower/">Twitter Bower</a> package manager, Chaplin is available there with `bower install chaplin#0.6.0`</li>
 </ul>
 
 <h2>Dependencies</h2>
@@ -70,7 +71,7 @@
 <ul>
   <li><a href="http://documentcloud.github.com/backbone/">Backbone</a> (> 0.9.9)</li>
   <li><a href="http://documentcloud.github.com/underscore/">Underscore</a> (> 1.4.3) or <a href="http://lodash.com/">lodash</a> (> 1.0.0)</li>
-  <li><a href="http://jquery.com/">jQuery</a> (> 1.8.3) or <a href="http://zeptojs.com">Zepto</a> (> 1.0rc1)</li>
+  <li><a href="http://jquery.com/">jQuery</a> (> 1.8.3) or <a href="http://zeptojs.com">Zepto</a> (> 1.0.0-rc1)</li>
 </ul>
 
 <p>If you’ll be using AMD version, you will also need an AMD module loader like <a href="http://requirejs.org/">RequireJS</a>, <a href="https://github.com/jrburke/almond">Almond</a> or <a href="https://github.com/cujojs/curl">curl</a> to load Chaplin and lazy-module application modules.
@@ -79,6 +80,14 @@
 <h2>Documentation</h2>
 
 <p>Documentation for Chaplin is available <a href="https://github.com/chaplinjs/chaplin/tree/master/docs">on GitHub</a>.</p>
+
+<h2>Motivation</h2>
+
+<p>While developing several web applications using Backbone.js, we felt the need for conventions on how to structure such applications. Backbone is an easy starting point, but provides only basic, low-level patterns. Especially, Backbone provides little to structure an actual application. For example, the famous “Todo list” is not an application in the strict sense nor does it teach best practices how to structure Backbone code.</p>
+
+<p>Backbone doesn’t intend to be an all-round framework so it’s not appropriate to blame Backbone for these deliberate limitations. Nonetheless, most Backbone use cases need a sophisticated application architecture.</p>
+
+<p>This is where Chaplin enters the stage. Chaplin is derived from the codebase of moviepilot.com, a real-world single-page application. It draws attention to the top-level architecture: everything above simple routing, individual models, views and their binding.</p>
 
 <h1>Examples</h1>
 
@@ -94,15 +103,7 @@
 </p>
 -->
 
-<!--
-<h2>Todos</h2>
-
-<p><strong>Disclaimer:</strong> besides of popular use, todos isn‘t a great example of a real-world web application. <a href="todos/public/">Todos</a> is a port of the famous backbone todos example app (<a href="https://github.com/brunch/todos">code</a>). Uses localStorage to persist data.</p>
-
--->
-
 <h2>Ost.io</h2>
-
 <p><a href="http://ost.io/">Ost.io</a> is an open-source forum for GitHub projects (<a href="https://github.com/paulmillr/ostio">code</a>). Uses <a href="https://github.com/paulmillr/brunch-with-chaplin">Chaplin</a> as app skeleton and Rails for backend.</p>
 
 <p>
@@ -112,7 +113,6 @@
 </p>
 
 <h2>Todos</h2>
-
 <p><a href="http://todomvc.com/labs/dependency-examples/chaplin-brunch/public/">Todos</a> (<a href="https://github.com/addyosmani/todomvc/tree/gh-pages/labs/dependency-examples/chaplin-brunch">code</a>) is a port of the famous backbone todos example app. Uses localStorage to persist data.</p>
 
 <p class="example-screenshot">
@@ -120,6 +120,12 @@
     <img src="http://todomvc.com/site/img/screenshot.png" alt="" />
   </a>
 </p>
+
+<h2>Facebook Like Browser</h2>
+<p><a href="https://github.com/chaplinjs/facebook-example">github.com/chaplinjs/facebook-example</a> example uses Facebook client-side authentication to display the user’s Likes.</p>
+
+<h2>Tweet your Brunch</h2>
+<p><a href="https://github.com/brunch/twitter">github.com/brunch/twitter</a> is a simple twitter client. It uses Twitter client-side authentication to display user’s feed and to create new tweets.</p>
 
 <h2>Delicious</h2>
 <p><a href="https://delicious.com">Delicious</a> is a free service designed to be the best place to save what you love on the web, whether it's a video, picture, product, blog post, article or music. We then help you remember and find it later. It’s using Brunch as application builder and <a href="http://chaplinjs.org">Chaplin</a> as a framework on top of Backbone.</p>
@@ -165,6 +171,21 @@
     <img src="images/screenshots/snipit.png" alt="Snip.it" />
   </a>
 </p>
+
+<h2>Commercial support and training</h2>
+
+<p><a href="http://9elements.com/">9elements</a> — Berlin/Bochum, Germany</p>
+
+<p>One of the creators of Chaplin, is offering commercial support and training for Chaplin and Backbone-based JavaScript applications. 9elements is a software and design agency located in Berlin and Bochum, Germany. Send us a mail for more information: <a href="mailto:contact@9elements.com">contact@9elements.com</a>.</p>
+
+<p><a href="http://paulmillr.com/">Paul Miller</a> — Kharkiv, Ukraine</p>
+
+<p>Chaplin &amp; Brunch maintainer is offering consulting &amp; training for all Backbone-related stuff. Contact him: <a href="mailto:&#112;&#97;&#117;&#108;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">&#112;&#97;&#117;&#108;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;</a>.</p>
+
+<p><a href="http://www.concordusapps.com/">Concordus Applications</a> — Sacramento, CA, USA</p>
+
+<p>Offering commerical support and training for Chaplin and Backbone-based JavaScript applications. Concordus Applications is an enterprise integration and software development firm. Email us for more information: <a href="mailto:support@concordusapps.com">support@concordusapps.com</a>.</p>
+
 
 <h2>Brought to you by</h2>
 
