--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <ul>
   <li><a href="http://chaplinjs.org/downloads/amd/chaplin.js">Chaplin 0.6.0 for AMD (require.js modules)</a></li>
   <li><a href="http://chaplinjs.org/downloads/commonjs/chaplin.js">Chaplin 0.6.0 for Brunch (common.js modules)</a></li>
-  <li>If you’re using <a href="http://twitter.github.com/bower/">Twitter Bower</a> package manager, Chaplin is available there with <pre>bower install chaplin#0.6.0</pre></li>
+  <li>If you’re using <a href="http://twitter.github.com/bower/">Twitter Bower</a> package manager, Chaplin is available there with <code>bower install chaplin#0.6.0</code></li>
 </ul>
 
 <h2>Dependencies</h2>
@@ -172,6 +172,14 @@
   </a>
 </p>
 
+<h1>Community</h1>
+
+<ul>
+  <li>For general support and discussion, there’s a <a href="http://ost.io/chaplinjs/chaplin">forum on ost.io</a>, a <a href="https://groups.google.com/forum/?hl=en&amp;fromgroups#!forum/chaplin-js">Google Group</a> and an IRC channel <code>#chaplinjs</code> on <a href="http://webchat.freenode.net?channels=chaplinjs">Freenode</a>.</li>
+  <li>If you’d like to report a bug or propose a feature, please use the <a href="https://github.com/chaplinjs/chaplin/issues">Github issues</a>. The issue tracker can also be used for general questions and task management.</li>
+  <li><a href="https://twitter.com/chaplinjs">Follow Chaplin.js on Twitter</a> to get updates on new versions, major changes and the ongoing development.</li>
+</ul>
+
 <h2>Commercial support and training</h2>
 
 <p><a href="http://9elements.com/">9elements</a> — Berlin/Bochum, Germany</p>
@@ -185,14 +193,6 @@
 <p><a href="http://www.concordusapps.com/">Concordus Applications</a> — Sacramento, CA, USA</p>
 
 <p>Offering commerical support and training for Chaplin and Backbone-based JavaScript applications. Concordus Applications is an enterprise integration and software development firm. Email us for more information: <a href="mailto:support@concordusapps.com">support@concordusapps.com</a>.</p>
-
-<h1>Community</h1>
-
-<ul>
-  <li>For general support and discussion, there’s a <a href="http://ost.io/chaplinjs/chaplin">forum on ost.io</a>, a <a href="https://groups.google.com/forum/?hl=en&amp;fromgroups#!forum/chaplin-js">Google Group</a> and an IRC channel <pre>#chaplinjs</pre> on <a href="http://webchat.freenode.net?channels=chaplinjs">Freenode</a>.</li>
-  <li>If you’d like to report a bug or propose a feature, please use the <a href="https://github.com/chaplinjs/chaplin/issues">Github issues</a>. The issue tracker can also be used for general questions and task management.</li>
-  <li><a href="https://twitter.com/chaplinjs">Follow Chaplin.js on Twitter</a> to get updates on new versions, major changes and the ongoing development.</li>
-</ul>
 
 <h2>Brought to you by</h2>
 
