Use html tags where appropriate.

--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
 
 <h2>Motivation</h2>
 
-<p>While developing several web applications using Backbone.js, we felt the need for conventions on how to structure such applications. Backbone is an easy starting point, but provides only basic, low-level patterns. Especially, Backbone provides little to structure an actual application. For example, the famous “Todo list” is not an application in the strict sense nor does it teach best practices how to structure Backbone code.</p>
+<p>While developing several web applications using Backbone.js, we felt the need for conventions on how to structure such applications. Backbone is an easy starting point, but provides only basic, low-level patterns. Especially, Backbone provides little to structure an actual application. For example, the famous “<a href="http://todomvc.com/">Todo list</a>” is not an application in the strict sense nor does it teach best practices how to structure Backbone code.</p>
 
-<p>Backbone doesn’t intend to be an all-round framework so it’s not appropriate to blame Backbone for these deliberate limitations. Nonetheless, most Backbone use cases need a sophisticated application architecture.</p>
+<p>Backbone doesn’t intend to be an all-round <a href="http://stackoverflow.com/questions/148747/what-is-the-difference-between-a-framework-and-a-library">framework</a> so it’s not appropriate to blame Backbone for these deliberate limitations. Nonetheless, most Backbone use cases need a sophisticated application architecture.</p>
 
-<p>This is where Chaplin enters the stage. Chaplin is derived from the codebase of moviepilot.com, a real-world single-page application. It draws attention to the top-level architecture: everything above simple routing, individual models, views and their binding.</p>
+<p>This is where Chaplin enters the stage. Chaplin is derived from the codebase of <a href="http://moviepilot.com/">moviepilot.com</a>, a real-world single-page application. It draws attention to the top-level architecture: everything above simple routing, individual models, views and their binding.</p>
 
 <h1>Examples</h1>
 
