--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
   <li>For general support and discussion, there’s a <a href="http://ost.io/chaplinjs/chaplin">forum on ost.io</a>, a <a href="https://groups.google.com/forum/?hl=en&amp;fromgroups#!forum/chaplin-js">Google Group</a> and an IRC channel <code>#chaplinjs</code> on <a href="http://webchat.freenode.net?channels=chaplinjs">Freenode</a>.</li>
   <li>If you’d like to report a bug or propose a feature, please use the <a href="https://github.com/chaplinjs/chaplin/issues">Github issues</a>. The issue tracker can also be used for general questions and task management.</li>
   <li><a href="https://twitter.com/chaplinjs">Follow Chaplin.js on Twitter</a> to get updates on new versions, major changes and the ongoing development.</li>
+  <li>You can also ask questions with <a href="http://stackoverflow.com/questions/tagged/chaplinjs">#chaplinjs tag at Stack Overflow</a></li>
 </ul>
 
 <h2>Commercial support and training</h2>
