--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
 <p><a href="http://les-tilleuls.coop">La Coopérative des Tilleuls</a> - Lille, France</p>
 
-<p>Offering commerical support and training for Chaplin and Backbone-based JavaScript applications. La Coopérative des Tilleuls is a software, training and web-design cooperative enterprise located in Lille, France. Send us a mail for more information: <a href="mailto:contact@les-tilleuls.coop">contact@les-tilleuls.coop</a>.</p>
+<p>Offering commercial support and training for Chaplin and Backbone-based JavaScript applications. La Coopérative des Tilleuls is a software, training and web-design cooperative enterprise located in Lille, France. Send us a mail for more information: <a href="mailto:contact@les-tilleuls.coop">contact@les-tilleuls.coop</a>.</p>
 
 <h2>Brought to you by</h2>
 
