--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
 <ul>
   <li>CoffeeScript <strong>class hierarchies</strong> as well as object composition</li>
+  <li>Better support for <strong>inheritance</strong>: automatic merging of declaratively bound events (and some other props) from the whole prototype chain.</li>
   <li><strong>Module</strong> encapsulation and lazy-loading using AMD / common.js modules</li>
   <li>Cross-module communication using the <strong>Mediator</strong> and Publish/Subscribe patterns</li>
   <li><strong>Controllers</strong> for managing individual UI views</li>
@@ -88,6 +89,17 @@
 <p>Backbone doesn’t intend to be an all-round <a href="http://stackoverflow.com/questions/148747/what-is-the-difference-between-a-framework-and-a-library">framework</a> so it’s not appropriate to blame Backbone for these deliberate limitations. Nonetheless, most Backbone use cases need a sophisticated application architecture.</p>
 
 <p>This is where Chaplin enters the stage. Chaplin is derived from the codebase of <a href="http://moviepilot.com/">moviepilot.com</a>, a real-world single-page application. It draws attention to the top-level architecture: everything above simple routing, individual models, views and their binding.</p>
+
+<h1>Boilerplates</h1>
+
+<p>Chaplin needs a simple skeleton to start up and configure the core modules. We provide several boilerplates to make the start easier.</p>
+
+<ul>
+  <li><a href="https://github.com/chaplinjs/chaplin-boilerplate">Chaplin Boilerplate</a> is a “Hello world” example project using Chaplin.</li>
+  <li><a href="https://github.com/chaplinjs/chaplin-boilerplate-plain">Chaplin Boilerplate in JS</a> is a clone of previous boilerplate for folks who don’t like CoffeeScript.</li>
+  <li><a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a> is a skeleton application for service-based web apps, where <a href="http://brunch.io">brunch</a> is used for assembling files &amp; assets. It incorporates html5boilerplate and stylus / handlebars.js as app languages. It’s included by-default with Brunch.</li>
+  <li>For <em>Ruby on Rails</em> users, we’ve compiled a <a href="https://github.com/chaplinjs/chaplin-rails">Boilerplate Rails Application with Backbone, Chaplin and Require.js</a>.</li>
+</ul>
 
 <h1>Examples</h1>
 
