--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 
 <p>There is no “global variables” build, so Chaplin explicitly prohibits any using without module systems.</p>
 
-<p>Latest release is 0.6.0 (<a href="https://github.com/chaplinjs/chaplin/blob/master/CHANGELOG.md">changelog</a>, <a href="http://github.com/chaplinjs/chaplin/compare/0.5.0...0.6.0">diff from 0.5.0</a>)</p>
+<p>Latest release is 0.7.0 (<a href="https://github.com/chaplinjs/chaplin/blob/master/CHANGELOG.md">changelog</a>, <a href="http://github.com/chaplinjs/chaplin/compare/0.6.0...0.7.0">diff from 0.6.0</a>)</p>
 
 <ul>
-  <li><a href="http://chaplinjs.org/downloads/amd/chaplin.js">Chaplin 0.6.0 for AMD (require.js modules)</a></li>
-  <li><a href="http://chaplinjs.org/downloads/commonjs/chaplin.js">Chaplin 0.6.0 for Brunch (common.js modules)</a></li>
-  <li>If you’re using <a href="http://twitter.github.com/bower/">Twitter Bower</a> package manager, Chaplin is available there with <code>bower install chaplin#0.6.0</code></li>
+  <li><a href="http://chaplinjs.org/downloads/amd/chaplin-0.7.0.js">Chaplin for AMD (require.js modules)</a></li>
+  <li><a href="http://chaplinjs.org/downloads/brunch/chaplin-0.7.0.js">Chaplin for Brunch (common.js modules)</a></li>
+  <li>If you’re using <a href="http://twitter.github.com/bower/">Twitter Bower</a> package manager, Chaplin is available there with <code>bower install chaplin#0.7.0</code></li>
 </ul>
 
 <h2>Dependencies</h2>
@@ -70,7 +70,7 @@
 <p>Chaplin depends on the following libraries:</p>
 
 <ul>
-  <li><a href="http://documentcloud.github.com/backbone/">Backbone</a> (> 0.9.9)</li>
+  <li><a href="http://documentcloud.github.com/backbone/">Backbone</a> (> 0.9.10)</li>
   <li><a href="http://documentcloud.github.com/underscore/">Underscore</a> (> 1.4.3) or <a href="http://lodash.com/">lodash</a> (> 1.0.0)</li>
   <li><a href="http://jquery.com/">jQuery</a> (> 1.8.3) or <a href="http://zeptojs.com">Zepto</a> (> 1.0.0-rc1)</li>
 </ul>
