--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 <p>Latest release is 0.7.0 (<a href="https://github.com/chaplinjs/chaplin/blob/master/CHANGELOG.md">changelog</a>, <a href="http://github.com/chaplinjs/chaplin/compare/0.6.0...0.7.0">diff from 0.6.0</a>)</p>
 
 <ul>
-  <li><a href="http://chaplinjs.org/downloads/amd/chaplin-0.7.0.js">Chaplin for AMD (require.js modules)</a></li>
-  <li><a href="http://chaplinjs.org/downloads/brunch/chaplin-0.7.0.js">Chaplin for Brunch (common.js modules)</a></li>
+  <li><a href="http://chaplinjs.org/downloads/amd/chaplin.js">Chaplin for AMD (require.js modules)</a></li>
+  <li><a href="http://chaplinjs.org/downloads/brunch/chaplin.js">Chaplin for Brunch (common.js modules)</a></li>
   <li>If you’re using <a href="http://twitter.github.com/bower/">Twitter Bower</a> package manager, Chaplin is available there with <code>bower install chaplin#0.7.0</code></li>
 </ul>
 
