--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
   <li><a href="https://github.com/chaplinjs/chaplin-boilerplate">Chaplin Boilerplate</a> is a “Hello world” example project using Chaplin.</li>
   <li><a href="https://github.com/chaplinjs/chaplin-boilerplate-plain">Chaplin Boilerplate in JS</a> is a clone of previous boilerplate for folks who don’t like CoffeeScript.</li>
   <li><a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a> is a skeleton application for service-based web apps, where <a href="http://brunch.io">brunch</a> is used for assembling files &amp; assets. It incorporates html5boilerplate and stylus / handlebars.js as app languages. It’s included by-default with Brunch.</li>
+  <li>If you’re using <em>Grunt</em>, there’s <a href="https://github.com/chaplinjs/grunt-init-chaplin">application generator</a> available.</li>
   <li>For <em>Ruby on Rails</em> users, we’ve compiled a <a href="https://github.com/chaplinjs/chaplin-rails">Boilerplate Rails Application with Backbone, Chaplin and Require.js</a>.</li>
 </ul>
 
