--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
 
 <ul>
   <li><a href="http://documentcloud.github.com/backbone/">Backbone</a> (> 0.9.10)</li>
-  <li><a href="http://documentcloud.github.com/underscore/">Underscore</a> (> 1.4.3) or <a href="http://lodash.com/">lodash</a> (> 1.0.0)</li>
-  <li><a href="http://jquery.com/">jQuery</a> (> 1.8.3) or <a href="http://zeptojs.com">Zepto</a> (> 1.0.0-rc1)</li>
+  <li><a href="http://documentcloud.github.com/underscore/">Underscore</a> (> 1.4) or <a href="http://lodash.com/">lodash</a> (> 1.0)</li>
+  <li><a href="http://jquery.com/">jQuery</a> (> 1.9) or <a href="http://zeptojs.com">Zepto</a> (> 1.0)</li>
 </ul>
 
 <p>If you’ll be using AMD version, you will also need an AMD module loader like <a href="http://requirejs.org/">RequireJS</a>, <a href="https://github.com/jrburke/almond">Almond</a> or <a href="https://github.com/cujojs/curl">curl</a> to load Chaplin and lazy-module application modules.
