Remove dependency h2 and add france company.

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <p>Some of Chaplin’s features:</p>
 
 <ul>
-  <li>CoffeeScript <strong>class hierarchies</strong> as well as object composition</li>
+  <li>Better support for CoffeeScript <strong>class hierarchies</strong> as well as object composition</li>
   <li>Better support for <strong>inheritance</strong>: automatic merging of declaratively bound events (and some other props) from the whole prototype chain.</li>
   <li>Strict <strong>memory management</strong> and object disposal</li>
   <li><strong>Module</strong> encapsulation and lazy-loading using AMD / common.js modules</li>
@@ -62,10 +62,8 @@
 <ul>
   <li><a href="http://chaplinjs.org/downloads/amd/chaplin.js">Chaplin for AMD (require.js modules)</a></li>
   <li><a href="http://chaplinjs.org/downloads/brunch/chaplin.js">Chaplin for Brunch (common.js modules)</a></li>
-  <li>If you’re using <a href="http://twitter.github.com/bower/">Twitter Bower</a> package manager, Chaplin is available there with <code>bower install chaplin#0.7.0</code></li>
+  <li>If you’re using <a href="http://twitter.github.com/bower/">Twitter Bower</a> package manager, Chaplin (AMD) is available there with <code>bower install chaplin#0.7.0</code></li>
 </ul>
-
-<h2>Dependencies</h2>
 
 <p>Chaplin depends on the following libraries:</p>
 
@@ -197,6 +195,10 @@
 <p><a href="http://www.concordusapps.com/">Concordus Applications</a> — Sacramento, CA, USA</p>
 
 <p>Offering commerical support and training for Chaplin and Backbone-based JavaScript applications. Concordus Applications is an enterprise integration and software development firm. Email us for more information: <a href="mailto:support@concordusapps.com">support@concordusapps.com</a>.</p>
+
+<p><a href="http://les-tilleuls.coop">La Coopérative des Tilleuls</a> - Lille, France</p>
+
+<p>Offering commercial support and training for Chaplin and Backbone-based JavaScript applications. La Coopérative des Tilleuls is a software, training and web-design cooperative enterprise located in Lille, France. Send us a mail for more information: <a href="mailto:contact@les-tilleuls.coop">contact@les-tilleuls.coop</a>.</p>
 
 <h2>Brought to you by</h2>
 
