--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
   <body>
 
     <header>
-      <h1>
-        Chaplin
-      </h1>
-      <p>Web application framework on top of Backbone.js.</p>
+      <h1>Chaplin</h1>
+      <p>Application framework on top of Backbone.js.</p>
     </header>
 
     <div class="wrapper">
@@ -30,7 +28,7 @@
     <iframe class="social-button-twitter" allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/follow_button.html?screen_name=chaplinjs&show_count=true&size=l" style="width:184px; height:30px;"></iframe>
     <iframe class="social-button-github" src="http://ghbtns.com/github-btn.html?user=chaplinjs&repo=chaplin&type=watch&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="165px" height="30px"></iframe>
   </div>
-  <h1>Web application framework</h1>
+  <h1>Application framework</h1>
 
 <p>
   Chaplin is an architecture for JavaScript applications using the Backbone.js library. Chaplin addresses Backbone’s limitations by providing a lightweight and flexible structure that features well-proven design patterns and best practices.
