Add examples wiki page.

--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
 <h1>Examples</h1>
 
 <p>
-  Know someone else who is enjoying chaplin already?
-  <a href="https://github.com/chaplinjs/chaplinjs.github.com/issues/new">Ping us!</a>
+  Are you using Chaplin too? <a href="https://github.com/chaplinjs/chaplin/wiki/Projects-and-companies-using-Chaplin">Add your application to the wiki page</a> and it will be featured here.
 </p>
 
 <!--
