Add annotated chaplin linl.

--- a/index.html
+++ b/index.html
@@ -78,6 +78,8 @@
 
 <p>Documentation for Chaplin is available <a href="https://github.com/chaplinjs/chaplin/tree/master/docs">on GitHub</a>.</p>
 
+<p>There is also <a href="http://chaplinjs.org/annotated/chaplin.html">annotated source code</a> available.</p>
+
 <h2>Motivation</h2>
 
 <p>While developing several web applications using Backbone.js, we felt the need for conventions on how to structure such applications. Backbone is an easy starting point, but provides only basic, low-level patterns. Especially, Backbone provides little to structure an actual application. For example, the famous “<a href="http://todomvc.com/">Todo list</a>” is not an application in the strict sense nor does it teach best practices how to structure Backbone code.</p>
