Add articles section/

--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
 
 <p>There is also <a href="http://chaplinjs.org/annotated/chaplin.html">annotated source code</a> available.</p>
 
+<p>Articles, screencasts and talks:</p>
+
+<ul>
+  <li><a href="http://9elements.com/io/index.php/comparison-of-marionette-and-chaplin/">JavaScript MVC frameworks: A Comparison of Marionette and Chaplin</a></li>
+</ul>
+
 <h2>Motivation</h2>
 
 <p>While developing several web applications using Backbone.js, we felt the need for conventions on how to structure such applications. Backbone is an easy starting point, but provides only basic, low-level patterns. Especially, Backbone provides little to structure an actual application. For example, the famous “<a href="http://todomvc.com/">Todo list</a>” is not an application in the strict sense nor does it teach best practices how to structure Backbone code.</p>
@@ -105,13 +111,6 @@
 <p>
   Are you using Chaplin too? <a href="https://github.com/chaplinjs/chaplin/wiki/Projects-and-companies-using-Chaplin">Add your application to the wiki page</a> and it will be featured here.
 </p>
-
-<!--
-<p>
-  For examples, articles and tutorials there are
-  <a href="https://github.com/brunch/brunch/wiki/Examples,-articles-and-tutorials">another wiki page</a>.
-</p>
--->
 
 <h2>Ost.io</h2>
 <p><a href="http://ost.io/">Ost.io</a> is an open-source forum for GitHub projects (<a href="https://github.com/paulmillr/ostio">code</a>). Uses <a href="https://github.com/paulmillr/brunch-with-chaplin">Chaplin</a> as app skeleton and Rails for backend.</p>
