Add russian translation of marionette vs chaplin article.

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 <p>Articles, screencasts and talks:</p>
 
 <ul>
-  <li><a href="http://9elements.com/io/index.php/comparison-of-marionette-and-chaplin/">JavaScript MVC frameworks: A Comparison of Marionette and Chaplin</a></li>
+  <li><a href="http://9elements.com/io/index.php/comparison-of-marionette-and-chaplin/">JavaScript MVC frameworks: A Comparison of Marionette and Chaplin</a> <a href="http://habrahabr.ru/post/177843/">(russian translation)</a></li>
 </ul>
 
 <h2>Motivation</h2>
