Add chaplin composer example.

--- a/index.html
+++ b/index.html
@@ -136,6 +136,15 @@
   </a>
 </p>
 
+<h2>Composing with Chaplin</h2>
+<p><a href="http://chaplinjs.org/composer-example/public/">Composing with Chaplin</a> is an example that shows how Chaplin regions behave (<a href="https://github.com/chaplinjs/composer-example">code</a>).
+
+<p>
+  <a href="http://chaplinjs.org/composer-example/public/">
+    <img src="images/screenshots/composer.png" alt="">
+  </a>
+</p>
+
 <h2>Facebook Like Browser</h2>
 <p><a href="https://github.com/chaplinjs/facebook-example">github.com/chaplinjs/facebook-example</a> example uses Facebook client-side authentication to display the user’s Likes.</p>
 
