--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 </p>
 
 <h2>Composing with Chaplin</h2>
-<p><a href="http://chaplinjs.org/composer-example/public/">Composing with Chaplin</a> is an example that shows how Chaplin regions behave (<a href="https://github.com/chaplinjs/composer-example">code</a>).
+<p><a href="http://chaplinjs.org/composer-example/public/">Composing with Chaplin</a> is an example that shows how Chaplin regions and compositions behave (<a href="https://github.com/chaplinjs/composer-example">code</a>).
 
 <p>
   <a href="http://chaplinjs.org/composer-example/public/">
