Update docs link.

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
 <h2>Documentation</h2>
 
-<p>Documentation for Chaplin is available <a href="https://github.com/chaplinjs/chaplin/tree/master/docs">on GitHub</a>.</p>
+<p>Documentation for Chaplin is available <a href="http://docs.chaplinjs.org/">on docs.chaplinjs.org</a>.</p>
 
 <p>There is also <a href="http://chaplinjs.org/annotated/chaplin.html">annotated source code</a> available.</p>
 
