--- a/index.html
+++ b/index.html
@@ -199,10 +199,10 @@
 <h2>Brought to you by</h2>
 
 <p class="builders">
-  <a href="http://molily.de/" rel="author"><img src="http://api.twitter.com/1/users/profile_image/molily?size=normal" alt="Mathias Schäfer">
+  <a href="http://molily.de/" rel="author"><img src="https://secure.gravatar.com/avatar/ae86e2cc402e0dceb88e7d4fc10cbc85" alt="Mathias Schäfer">
    <span class="name">Mathias</span> Schäfer</a>
 
-  <a href="http://paulmillr.com/" rel="author"><img src="http://api.twitter.com/1/users/profile_image/paulmillr?size=normal" alt="Paul Miller">
+  <a href="http://paulmillr.com/" rel="author"><img src="https://secure.gravatar.com/avatar/d342e4ef045c54a6a6f41d070d8a0406" alt="Paul Miller">
    <span class="name">Paul</span> Miller</a>
 
   <a class="long-builder-name" href="https://github.com/mehcode"><img src="https://secure.gravatar.com/avatar/23e170cf3bbbb2a392a96df75858b332?s=400&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" width="48" height="48" alt="Ryan Leckey">
