--- a/index.html
+++ b/index.html
@@ -184,9 +184,9 @@
 
 <p>One of the creators of Chaplin, is offering commercial support and training for Chaplin and Backbone-based JavaScript applications. 9elements is a software and design agency located in Berlin and Bochum, Germany. Send us a mail for more information: <a href="mailto:contact@9elements.com">contact@9elements.com</a>.</p>
 
-<p><a href="http://paulmillr.com/">Paul Miller</a> — Kharkiv, Ukraine</p>
+<p><a href="http://paulmillr.com/">Paul Miller</a> — Worldwide</p>
 
-<p>Chaplin &amp; Brunch maintainer is offering consulting &amp; training for all Backbone-related stuff. Contact him: <a href="mailto:&#112;&#97;&#117;&#108;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">&#112;&#97;&#117;&#108;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;</a>.</p>
+<p>Chaplin &amp; Brunch maintainer is offering consulting &amp; training for all Backbone-related stuff. Contact him: <a href="mailto:&#112;&#97;&#117;&#108;&#43;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;">&#112;&#97;&#117;&#108;&#43;&#99;&#111;&#110;&#115;&#117;&#108;&#116;&#105;&#110;&#103;&#64;&#112;&#97;&#117;&#108;&#109;&#105;&#108;&#108;&#114;&#46;&#99;&#111;&#109;</a>.</p>
 
 <p><a href="http://www.concordusapps.com/">Concordus Applications</a> — Sacramento, CA, USA</p>
 
