--- a/index.html
+++ b/index.html
@@ -55,19 +55,19 @@
 
 <p>There is no “global variables” build, so Chaplin explicitly prohibits any using without module systems.</p>
 
-<p>Latest release is 0.9.0 (<a href="https://github.com/chaplinjs/chaplin/blob/master/CHANGELOG.md">changelog</a>, <a href="http://github.com/chaplinjs/chaplin/compare/0.8.0...0.9.0">diff from 0.8.0</a>)</p>
+<p>Latest release is 0.10.0 (<a href="https://github.com/chaplinjs/chaplin/blob/master/CHANGELOG.md">changelog</a>, <a href="http://github.com/chaplinjs/chaplin/compare/0.9.0...0.10.0">diff from 0.9.0</a>)</p>
 
 <ul>
-  <li><a href="http://chaplinjs.org/downloads/amd/chaplin.js">Chaplin for AMD (require.js modules)</a></li>
-  <li><a href="http://chaplinjs.org/downloads/brunch/chaplin.js">Chaplin for Brunch (common.js modules)</a></li>
-  <li>If you’re using <a href="http://twitter.github.com/bower/">Twitter Bower</a> package manager, Chaplin (AMD) is available there with <code>bower install chaplin#0.9.0</code></li>
+  <li><a href="http://chaplinjs.org/downloads/chaplin.js">chaplin.js</a></li>
+  <li><a href="http://chaplinjs.org/downloads/chaplin.min.js">chaplin.min.js</a></li>
+  <li>If you’re using <a href="http://twitter.github.com/bower/">Twitter Bower</a> package manager, Chaplin is available there with <code>bower install chaplin#0.10.0</code></li>
 </ul>
 
 <p>Chaplin depends on the following libraries:</p>
 
 <ul>
   <li><a href="http://documentcloud.github.com/backbone/">Backbone</a> (> 1.0)</li>
-  <li><a href="http://documentcloud.github.com/underscore/">Underscore</a> (> 1.4) or <a href="http://lodash.com/">lodash</a> (> 1.2)</li>
+  <li><a href="http://documentcloud.github.com/underscore/">Underscore</a> (> 1.4) or <a href="http://lodash.com/">lodash</a> (> 1.3)</li>
   <li><a href="http://jquery.com/">jQuery</a> (> 1.9) or <a href="http://zeptojs.com">Zepto</a> (> 1.0)</li>
 </ul>
 
