--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 <ul>
   <li><a href="http://chaplinjs.org/downloads/chaplin.js">chaplin.js</a></li>
   <li><a href="http://chaplinjs.org/downloads/chaplin.min.js">chaplin.min.js</a></li>
-  <li>If you’re using <a href="http://twitter.github.com/bower/">Twitter Bower</a> package manager, Chaplin is available there with <code>bower install chaplin#0.10.0</code></li>
+  <li>If you’re using <a href="http://bower.io">Twitter Bower</a> package manager, Chaplin is available there with <code>bower install --save chaplin#0.10.0</code></li>
+  <li>If you’re using <a href="https://github.com/component/component">component(1</a> package manager, Chaplin is available there with <code>component install chaplinjs/downloads</code></li>
 </ul>
 
 <p>Chaplin depends on the following libraries:</p>
