--- a/index.html
+++ b/index.html
@@ -58,10 +58,10 @@
 <p>Latest release is 0.10.0 (<a href="https://github.com/chaplinjs/chaplin/blob/master/CHANGELOG.md">changelog</a>, <a href="http://github.com/chaplinjs/chaplin/compare/0.9.0...0.10.0">diff from 0.9.0</a>)</p>
 
 <ul>
-  <li><a href="http://chaplinjs.org/downloads/chaplin.js">chaplin.js</a></li>
-  <li><a href="http://chaplinjs.org/downloads/chaplin.min.js">chaplin.min.js</a></li>
-  <li>If you’re using <a href="http://bower.io">Twitter Bower</a> package manager, Chaplin is available there with <code>bower install --save chaplin#0.10.0</code></li>
-  <li>If you’re using <a href="https://github.com/component/component">component(1)</a> package manager, Chaplin is available there with <code>component install chaplinjs/downloads</code></li>
+  <li><a href="http://chaplinjs.org/downloads/chaplin.js">Download chaplin.js</a></li>
+  <li><a href="http://chaplinjs.org/downloads/chaplin.min.js">Download chaplin.min.js</a></li>
+  <li>Execute <code>bower install --save chaplin#0.10.0</code> if you’re using <a href="http://bower.io">Twitter Bower</a> package manager</li>
+  <li>Execute <code>component install chaplinjs/downloads</code> if you’re using <a href="https://github.com/component/component">component(1)</a> package manager</li>
 </ul>
 
 <p>Chaplin depends on the following libraries:</p>
