Update and reorganize examples

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     </header>
 
     <div class="wrapper">
-<nav>
-  <ul></ul>
-</nav>
+    <nav>
+      <ul></ul>
+    </nav>
 <section>
   <div class="social-buttons">
     <iframe class="social-button-twitter" allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/follow_button.html?screen_name=chaplinjs&show_count=true&size=l" style="width:184px; height:30px;"></iframe>
@@ -110,20 +110,20 @@
 <h1>Examples</h1>
 
 <p>
-  Are you using Chaplin too? <a href="https://github.com/chaplinjs/chaplin/wiki/Projects-and-companies-using-Chaplin">Add your application to the wiki page</a> and it will be featured here.
+  To give you an idea of how client-side applications are built using Chaplin, here are some projects and example applications whose source is freely accessible.
 </p>
 
 <h2>Ost.io</h2>
-<p><a href="http://ost.io/">Ost.io</a> is an open-source forum for GitHub projects (<a href="https://github.com/paulmillr/ostio">code</a>). Uses <a href="https://github.com/paulmillr/brunch-with-chaplin">Chaplin</a> as app skeleton and Rails for backend.</p>
+<p><a href="http://ost.io/">Ost.io</a> is an open-source forum for GitHub projects (<a href="https://github.com/paulmillr/ostio">code</a>). It uses <a href="https://github.com/paulmillr/brunch-with-chaplin">Chaplin</a> as an application skeleton and Rails for the backend.</p>
 
 <p>
   <a href="http://ost.io/">
-    <img src="images/screenshots/ostio.png" alt="">
+    <img src="images/screenshots/ostio-07-2013.png" alt="Ost.io">
   </a>
 </p>
 
 <h2>Todos</h2>
-<p><a href="http://todomvc.com/labs/dependency-examples/chaplin-brunch/public/">Todos</a> (<a href="https://github.com/addyosmani/todomvc/tree/gh-pages/labs/dependency-examples/chaplin-brunch">code</a>) is a port of the famous backbone todos example app. Uses localStorage to persist data.</p>
+<p><a href="http://todomvc.com/labs/dependency-examples/chaplin-brunch/public/">Todos</a> (<a href="https://github.com/addyosmani/todomvc/tree/gh-pages/labs/dependency-examples/chaplin-brunch">code</a>) is a port of the famous Backbone todo example app. It uses localStorage to persist data.</p>
 
 <p>Alternative versions:</p>
 
@@ -133,31 +133,49 @@
 
 <p class="example-screenshot">
   <a href="http://todomvc.com/labs/dependency-examples/chaplin-brunch/public/">
-    <img src="http://todomvc.com/site/img/screenshot.png" alt="" />
+    <img src="http://todomvc.com/site/img/screenshot.png" alt="TodoMVC">
   </a>
 </p>
 
 <h2>Composing with Chaplin</h2>
-<p><a href="http://chaplinjs.org/composer-example/public/">Composing with Chaplin</a> is an example that shows how Chaplin regions and compositions behave (<a href="https://github.com/chaplinjs/composer-example">code</a>).
-
-<p>
-  <a href="http://chaplinjs.org/composer-example/public/">
-    <img src="images/screenshots/composer.png" alt="">
-  </a>
-</p>
+<p><a href="http://chaplinjs.org/composer-example/public/">Composing with Chaplin</a> is an example that shows how Chaplin regions and compositions behave. Find its source code <a href="https://github.com/chaplinjs/composer-example">on GitHub</a>.
 
 <h2>Facebook Like Browser</h2>
-<p><a href="https://github.com/chaplinjs/facebook-example">github.com/chaplinjs/facebook-example</a> example uses Facebook client-side authentication to display the user’s Likes.</p>
+<p>This example application uses Facebook client-side authentication to display the user’s Facebook Likes. Find its source at <a href="https://github.com/chaplinjs/facebook-example">github.com/chaplinjs/facebook-example</a>.</p>
 
 <h2>Tweet your Brunch</h2>
-<p><a href="https://github.com/brunch/twitter">github.com/brunch/twitter</a> is a simple twitter client. It uses Twitter client-side authentication to display user’s feed and to create new tweets.</p>
+<p><a href="https://github.com/brunch/twitter">github.com/brunch/twitter</a> is a simple twitter client. It uses Twitter client-side authentication to display the user’s feed and create new tweets.</p>
+
+<h1>In Production</h1>
+
+<p>
+  Below you find some of the companies and projects using Chaplin in production. Are you using Chaplin too? Go ahead and <a href="https://github.com/chaplinjs/chaplin/wiki/Projects-and-companies-using-Chaplin">add your application to the wiki page</a> to let us know!
+</p>
 
 <h2>Delicious</h2>
 <p><a href="https://delicious.com">Delicious</a> is a free service designed to be the best place to save what you love on the web, whether it's a video, picture, product, blog post, article or music. We then help you remember and find it later. It’s using Brunch as application builder and <a href="http://chaplinjs.org">Chaplin</a> as a framework on top of Backbone.</p>
 
 <p>
   <a href="https://delicious.com">
-    <img src="http://brunch.io/images/screenshots/delicious.png" alt="Delicious" />
+    <img src="images/screenshots/delicious-07-2013.png" alt="Delicious">
+  </a>
+</p>
+
+<h2>GED VIZ by Bertelsmann Stiftung</h2>
+<p><a href="http://viz.ged-project.de/">GED VIZ</a> lets you create and share visualizations of global economic relations - for research, teaching and storytelling.</p>
+
+<p>
+  <a href="http://viz.ged-project.de/">
+    <img src="images/screenshots/ged-07-2013.png" alt="GED VIZ">
+  </a>
+</p>
+
+<h2>Bank of Ireland</h2>
+<p>The <a href="http://fundcentre.bankofireland.com/">Bank of Ireland Fund Centre</a> is a free service by MoneyMate that allows users to check funds, daily prices and performance.</p>
+
+<p>
+  <a href="http://fundcentre.bankofireland.com/">
+    <img src="images/screenshots/bankofireland-07-2013.png" alt="Bank of Ireland Fund Centre">
   </a>
 </p>
 
@@ -166,7 +184,7 @@
 
 <p>
   <a href="http://moviepilot.com/">
-    <img src="images/screenshots/moviepilot.png" alt="Moviepilot" />
+    <img src="images/screenshots/moviepilot-07-2013.png" alt="Moviepilot">
   </a>
 </p>
 
