Add some wording tweaks

--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
     <iframe class="social-button-twitter" allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/follow_button.html?screen_name=chaplinjs&show_count=true&size=l" style="width:184px; height:30px;"></iframe>
     <iframe class="social-button-github" src="http://ghbtns.com/github-btn.html?user=chaplinjs&repo=chaplin&type=watch&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="165px" height="30px"></iframe>
   </div>
-  <h1>Application architecture</h1>
+  <h1>About Chaplin</h1>
 
 <p>
-  Chaplin is an architecture for JavaScript applications using the Backbone.js library. Chaplin addresses Backbone’s limitations by providing a lightweight and flexible structure that features well-proven design patterns and best practices.
+Chaplin is an architecture for JavaScript applications using the <a href="http://backbonejs.org/">Backbone.js</a> library. Chaplin addresses Backbone’s limitations by providing a lightweight and flexible structure that features well-proven design patterns and best practices.
 </p>
 
 <p>Some of Chaplin’s features:</p>
@@ -72,24 +72,24 @@
   <li><a href="http://jquery.com/">jQuery</a> (> 1.9) or <a href="http://zeptojs.com">Zepto</a> (> 1.0)</li>
 </ul>
 
-<p>If you’ll be using AMD version, you will also need an AMD module loader like <a href="http://requirejs.org/">RequireJS</a>, <a href="https://github.com/jrburke/almond">Almond</a> or <a href="https://github.com/cujojs/curl">curl</a> to load Chaplin and lazy-module application modules.
+<p>If you’ll be using the AMD version, you will also need an AMD module loader like <a href="http://requirejs.org/">RequireJS</a>, <a href="https://github.com/jrburke/almond">Almond</a> or <a href="https://github.com/cujojs/curl">curl</a> to load Chaplin and lazy-module application modules.
 </p>
 
 <h2>Documentation</h2>
 
-<p>Documentation for Chaplin is available <a href="http://docs.chaplinjs.org/">on docs.chaplinjs.org</a>.</p>
+<p>Documentation for Chaplin is available at <a href="http://docs.chaplinjs.org/">docs.chaplinjs.org</a>.</p>
 
-<p>There is also <a href="http://chaplinjs.org/annotated/chaplin.html">annotated source code</a> available.</p>
+<p>The <a href="http://chaplinjs.org/annotated/chaplin.html">annotated source code</a> is available, too.</p>
 
 <p>Articles, screencasts and talks:</p>
 
 <ul>
-  <li><a href="http://9elements.com/io/index.php/comparison-of-marionette-and-chaplin/">JavaScript MVC frameworks: A Comparison of Marionette and Chaplin</a> <a href="http://habrahabr.ru/post/177843/">(russian translation)</a></li>
+  <li><a href="http://9elements.com/io/index.php/comparison-of-marionette-and-chaplin/">JavaScript MVC frameworks: A Comparison of Marionette and Chaplin</a> <a href="http://habrahabr.ru/post/177843/">(Russian translation)</a></li>
 </ul>
 
 <h2>Motivation</h2>
 
-<p>While developing several web applications using Backbone.js, we felt the need for conventions on how to structure such applications. Backbone is an easy starting point, but provides only basic, low-level patterns. Especially, Backbone provides little to structure an actual application. For example, the famous “<a href="http://todomvc.com/">Todo list</a>” is not an application in the strict sense nor does it teach best practices how to structure Backbone code.</p>
+<p>While developing several web applications using Backbone.js, we felt the need for conventions on how to structure such applications. Backbone is an easy starting point, but provides only basic, low-level patterns. Especially, Backbone provides little to structure an actual application. For example, the famous “<a href="http://todomvc.com/">Todo list</a>” is not an application in the strict sense nor does it teach best practices for structuring Backbone code.</p>
 
 <p>Backbone doesn’t intend to be an all-round <a href="http://stackoverflow.com/questions/148747/what-is-the-difference-between-a-framework-and-a-library">framework</a> so it’s not appropriate to blame Backbone for these deliberate limitations. Nonetheless, most Backbone use cases need a sophisticated application architecture.</p>
 
@@ -101,10 +101,10 @@
 
 <ul>
   <li><a href="https://github.com/chaplinjs/chaplin-boilerplate">Chaplin Boilerplate</a> is a “Hello world” example project using Chaplin.</li>
-  <li><a href="https://github.com/chaplinjs/chaplin-boilerplate-plain">Chaplin Boilerplate in JS</a> is a clone of previous boilerplate for folks who don’t like CoffeeScript.</li>
-  <li><a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a> is a skeleton application for service-based web apps, where <a href="http://brunch.io">brunch</a> is used for assembling files &amp; assets. It incorporates html5boilerplate and stylus / handlebars.js as app languages. It’s included by-default with Brunch.</li>
-  <li>If you’re using <em>Grunt</em>, there’s <a href="https://github.com/chaplinjs/grunt-init-chaplin">application generator</a> available.</li>
-  <li>For <em>Ruby on Rails</em> users, we’ve compiled a <a href="https://github.com/chaplinjs/chaplin-rails">Boilerplate Rails Application with Backbone, Chaplin and Require.js</a>.</li>
+  <li><a href="https://github.com/chaplinjs/chaplin-boilerplate-plain">Chaplin Boilerplate in JS</a> is a variant of the previous boilerplate for those preferring JavaScript over CoffeeScript.</li>
+  <li><a href="https://github.com/paulmillr/brunch-with-chaplin">Brunch with Chaplin</a> is a skeleton application for service-based web apps, where <a href="http://brunch.io">Brunch</a> is used for assembling files &amp; assets. It incorporates <a href="http://html5boilerplate.com/">HTML5 Boilerplate</a> and <a href="http://learnboost.github.io/stylus/">stylus</a>/<a href="http://handlebarsjs.com/">Handlebars</a> as app languages. It’s included by default with Brunch.</li>
+  <li>If you’re using <a href="http://gruntjs.com/">Grunt</a>, an <a href="https://github.com/chaplinjs/grunt-init-chaplin">application generator</a> is available.</li>
+  <li>For <a href="http://rubyonrails.org/">Ruby on Rails</a> users, we’ve compiled a <a href="https://github.com/chaplinjs/chaplin-rails">Boilerplate Rails Application</a> with Backbone, Chaplin and Require.js.</li>
 </ul>
 
 <h1>Examples</h1>
@@ -194,7 +194,7 @@
   <li>For general support and discussion, there’s a <a href="http://ost.io/@chaplinjs/chaplin">forum on ost.io</a>, a <a href="https://groups.google.com/forum/?hl=en&amp;fromgroups#!forum/chaplin-js">Google Group</a> and an IRC channel <code>#chaplinjs</code> on <a href="http://webchat.freenode.net?channels=chaplinjs">Freenode</a>.</li>
   <li>If you’d like to report a bug or propose a feature, please use the <a href="https://github.com/chaplinjs/chaplin/issues">Github issues</a>. The issue tracker can also be used for general questions and task management.</li>
   <li><a href="https://twitter.com/chaplinjs">Follow Chaplin.js on Twitter</a> to get updates on new versions, major changes and the ongoing development.</li>
-  <li>You can also ask questions with <a href="http://stackoverflow.com/questions/tagged/chaplinjs">#chaplinjs tag at Stack Overflow</a></li>
+  <li>You can also post questions with the <a href="http://stackoverflow.com/questions/tagged/chaplinjs">#chaplinjs tag at Stack Overflow</a></li>
 </ul>
 
 <h2>Commercial support and training</h2>
