Fix modules desc.

--- a/index.html
+++ b/index.html
@@ -51,9 +51,7 @@
 
 <h2>Downloads</h2>
 
-<p>Chaplin is available in two builds: AMD and Common.js. Pick AMD if you want to build your app manually with <a href="http://requirejs.org">require.js</a> or common.js if you want to get stuff handled automatically with <a href="http://brunch.io">Brunch</a>.</p>
-
-<p>There is no “global variables” build, so Chaplin explicitly prohibits any using without module systems.</p>
+<p>Chaplin supports AMD and Common.js modules. There is no “global variables” build, so Chaplin explicitly prohibits any using without module systems.</p>
 
 <p>Latest release is 0.10.0 (<a href="https://github.com/chaplinjs/chaplin/blob/master/CHANGELOG.md">changelog</a>, <a href="http://github.com/chaplinjs/chaplin/compare/0.9.0...0.10.0">diff from 0.9.0</a>)</p>
 
