Remove lifecycle graph.

--- a/index.html
+++ b/index.html
@@ -78,13 +78,9 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
 
 <p>Documentation for Chaplin is available at <a href="http://docs.chaplinjs.org/">docs.chaplinjs.org</a>.</p>
 
-Chaplin application lifecycle can be described by the picture:
-
-<a href="images/chaplin-lifecycle.png"><img src="images/chaplin-lifecycle.png" /></a>
-
 <p>The <a href="http://chaplinjs.org/annotated/chaplin.html">annotated source code</a> is available, too.</p>
 
-<p>Articles, screencasts and talks:</p>
+<p>See also:</p>
 
 <ul>
   <li><a href="http://9elements.com/io/index.php/comparison-of-marionette-and-chaplin/">JavaScript MVC frameworks: A Comparison of Marionette and Chaplin</a> <a href="http://habrahabr.ru/post/177843/">(Russian translation)</a></li>
