--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@ layout: base
   <iframe class="social-button-twitter" allowtransparency="true" frameborder="0" scrolling="no" src="https://platform.twitter.com/widgets/follow_button.html?screen_name=chaplinjs&show_count=true&size=l" style="width:184px; height:30px;"></iframe>
   <iframe class="social-button-github" src="http://ghbtns.com/github-btn.html?user=chaplinjs&repo=chaplin&type=watch&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="165px" height="30px"></iframe>
 </div>
-<h1>About Chaplin</h1>
-
 
 <p>
 Chaplin is an architecture for JavaScript applications using the <a href="http://backbonejs.org/">Backbone.js</a> library. Chaplin addresses Backbone’s limitations by providing a lightweight and flexible structure that features well-proven design patterns and best practices.
@@ -87,8 +85,12 @@ Chaplin is an architecture for JavaScript applications using the <a href="http:/
 <p>If you’ll be using Chaplin with AMD, you will also need an AMD module loader like <a href="http://requirejs.org/">RequireJS</a>, <a href="https://github.com/jrburke/almond">Almond</a> or <a href="https://github.com/cujojs/curl">curl</a> to load Chaplin and lazy-module application modules.
 </p>
 
+<h2>Getting started</h2>
+
+<p>Getting started with Chaplin is really simple</p>
+
+
 
 <footer>
   <p><small>Hosted on <a href="https://github.com/chaplinjs/chaplinjs.github.com">GitHub Pages</a></small></p>
 </footer>
-
